--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,9 +22,9 @@ jobs:
         with:
           node-version: 20.x
       - name: install dependencies
-        run: yarn
+        run: npm install
       - name: build
-        run: yarn build
+        run: npm run build
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
