fix: missing nest-cli package

--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -16,7 +16,8 @@
     "@types/node": "^20.11.24",
     "@types/uuid": "^9.0.8",
     "eslint": "^8.57.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@nestjs/cli": "10.3.2"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.8",
