--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "version": "changeset version",
+    "release": "changeset publish",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "publish": "turbo publish"
   },
