--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -2,6 +2,7 @@
   "name": "@pod-pilot/nestjs",
   "version": "0.0.0",
   "publishConfig": {
+    "registry": "https://npm.pkg.github.com/anoam99",
     "access": "public"
   },
   "scripts": {
