--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@pod-pilot/nestjs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "nest build",
-    "publish": "npm publish --access public"
+    "build": "nest build"
   },
   "devDependencies": {
     "@pod-pilot/eslint-config": "*",
